[project]
name = "octopoes"
version = "0.0.1.dev1"
description = "KAT's knowledge graph engine"
authors = [{ name = "MinVWS", email = "maintainer@openkat.nl" }]
requires-python = "~=3.10"
license = { text = "EUPL-1.2" }
dependencies = [
    "pydantic>=2.7.1,<3",
    "uvicorn>=0.29.0,<0.30",
    "pika>=1.3.1,<2",
    "PyYAML~=6.0",
    "dnspython>=2.6.1,<3",
    "kombu>=5.2.4,<6",
    "celery>=5.2.7,<6",
    "pyparsing>=3.0.9,<4",
    "tldextract>5",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-httpx",
    "sqlalchemy==1.4.48",
    "jsonschema>=4.18.0,<5",
    "pydantic-settings>=2.2.1,<3",
    "httpx>=0.28.1,<0.29",
    "link-shorteners>=1.11.0,<2",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-dbapi",
    "opentelemetry-proto",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "fastapi-slim>=0.115.2",
    "structlog>=25.2.0,<26",
    "asgiref>=3.8.1,<4",
    "setuptools>80",
]

[dependency-groups]
dev = [
    "robotframework>=7.2.2,<8",
    "robotframework-requests>=0.9.7,<0.10",
    "robotframework-httplibrary>=0.4.2,<0.5",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.0,<4",
    "pytest-env>=1.1.5,<2",
    "pytest-timeout>=2.4.0,<3",
    "pytest-httpx>=0.35.0,<0.36",
]

[tool.uv]
package = false

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
env = [
    "D:XTDB_URI=http://testxtdb:3000",
    "D:QUEUE_URI=amqp://placeholder",
    "D:KATALOGUS_API=http://placeholder:8000",
]
