[project]
name = "octopoes"
version = "0.0.1.dev1"
description = "KAT's knowledge graph engine"
authors = [{ name = "MinVWS", email = "maintainer@openkat.nl" }]
requires-python = ">=3.10"
license = { text = "EUPL-1.2" }
dependencies = [
    "pydantic==2.11.7",
    "uvicorn==0.29.0",
    "pika==1.3.2",
    "pyyaml==6.0.2",
    "dnspython==2.7.0",
    "kombu==5.5.4",
    "celery==5.5.3",
    "pyparsing==3.2.3",
    "tldextract==5.3.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-instrumentation==0.56b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.35.0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-instrumentation-psycopg2==0.56b0",
    "opentelemetry-instrumentation-httpx==0.56b0",
    "sqlalchemy==1.4.48",
    "jsonschema==4.24.0",
    "pydantic-settings==2.10.1",
    "httpx==0.28.1",
    "link-shorteners==1.14.1",
    "opentelemetry-api==1.35.0",
    "opentelemetry-exporter-otlp-proto-common==1.35.0",
    "opentelemetry-instrumentation-asgi==0.56b0",
    "opentelemetry-instrumentation-dbapi==0.56b0",
    "opentelemetry-proto==1.35.0",
    "opentelemetry-semantic-conventions==0.56b0",
    "opentelemetry-util-http==0.56b0",
    "fastapi-slim==0.116.1",
    "structlog==25.4.0",
    "asgiref==3.9.1",
    "setuptools==80.9.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "billiard==4.2.1",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "exceptiongroup==1.3.0 ; python_full_version < '3.11'",
    "filelock==3.18.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jsonschema-specifications==2025.4.1",
    "packaging==25.0",
    "prompt-toolkit==3.0.52",
    "protobuf==6.31.1",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-file==2.1.0",
    "rpds-py==0.26.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.2",
    "zipp==3.23.0",
]

[dependency-groups]
dev = [
    "robotframework>=7.2.2,<8",
    "robotframework-requests>=0.9.7,<0.10",
    "robotframework-httplibrary>=0.4.2,<0.5",
    "pytest>=8.3.5,<9",
    "pytest-cov>=7",
    "pytest-mock>=3.14.0,<4",
    "pytest-env>=1.1.5,<2",
    "pytest-timeout>=2.4.0,<3",
    "pytest-httpx>=0.35.0,<0.36",
]

[tool.uv]
package = false

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered"
env = [
    "D:XTDB_URI=http://testxtdb:3000",
    "D:QUEUE_URI=amqp://placeholder",
    "D:KATALOGUS_API=http://placeholder:8000",
]
