[tool.poetry]
name = "rocky"
version = "0.0.1.dev1"
description = "KAT's Django front-end"
authors = ["MinVWS <maintainer@openkat.nl>"]
license = "EUPL"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
Django = "5.1.9"
django-two-factor-auth = "^1.17.0"
django-environ = "^0.12.0"
jsonschema = "^4.17.0"
phonenumbers = "^9.0.4"
psycopg2 = "^2.9.6"
pydantic = "^2.7.1"
python-dotenv = "^1.0.0"
django-password-validators = "^1.7.1"
django-csp = "^4.0"
djangorestframework = "^3.16.0"
django-tagulous = "^2.1.0"
drf-standardized-errors = "^0.14.1"
django-compressor = {git = "https://github.com/dekkers/django-compressor.git", rev = "csp-nonce"}
django-weasyprint = "^2.4.0"
strenum = "^0.4.15"
django-rest-knox = "^5.0.2"

# OpenTelemetry
opentelemetry-sdk = "^1.32.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.32.1"
opentelemetry-instrumentation-django = "^0.53b1"
opentelemetry-instrumentation-psycopg2 = "^0.53b1"
whitenoise = { extras = ["brotli"], version = "^6.5.0" }
opentelemetry-instrumentation = "^0.53b1"
opentelemetry-instrumentation-fastapi = "^0.53b1"
granian = "^2.2.6"
django-components = "^0.88"

# These used in octopoes parts that are used by rocky
pyparsing = "^3.1.1"
pydantic-settings = "^2.0.3"
opentelemetry-instrumentation-httpx = "^0.53b1"
httpx = "^0.27.0"
opentelemetry-api = "^1.32.1"
opentelemetry-exporter-otlp-proto-common = "^1.32.1"
opentelemetry-instrumentation-asgi = "^0.53b1"
opentelemetry-instrumentation-dbapi = "^0.53b1"
opentelemetry-instrumentation-wsgi = "^0.53b1"
opentelemetry-proto = "^1.32.1"
opentelemetry-semantic-conventions = "^0.53b1"
opentelemetry-util-http = "^0.53b1"
structlog = "^25.3.0"
django-structlog = "^9.1.1"
cron-descriptor = "^1.4.5"


[tool.poetry.group.dev.dependencies]
djlint = "^1.32.1"
PyNaCl = "^1.5.0"
pytest = "^7.4.0"
pytest-cov = "^6.0.0"
pytest-django = "^4.5.2"
pytest-drf = "^1.1.3"
pytest-mock = "^3.11.1"
pytest-httpx = "^0.30.0"
model-mommy = "^2.0.0"
factory-boy = "^3.2.1"
django-admin-auto-tests = { git = "https://github.com/dekkers/django-admin-auto-tests", rev = "f6eb4cbb9112b5aa933313d79e4da823adb41e1e" }

# Robot Framework dependencies
robotframework = "^7.1.1"
robotframework-browser = "^19.0.1"
robotframework-debuglibrary = "^2.5.0"
robotframework-otp = "^1.1.0"
robotframework-postgresqldb = "^2.0.0"

[build-system]
requires = ["setuptools>=62.2", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
relative_files = true
omit = ["octopoes/*"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report xml --cov-branch --cov-report=term-missing:skip-covered -m 'not slow' --ignore=tests/integration"
DJANGO_SETTINGS_MODULE = "rocky.settings_test"
markers = ["slow: marks tests as slow"]

[tool.djlint]
max_line_length = 120
blank_line_after_tag = "load,extends,include"
# https://www.djlint.com/docs/linter/#rules
ignore = "H006,H016,H017,H030,H031"
